--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <div id="navbar">
         <nav>
             <ul>
-                <li><img src="/logo-dark.png" height="100px"></li>
+                <li><img src="logo-dark.png" height="100px"></li>
                 <li class="l"><a  href="#">Home</a></li>
                 <li class="l"><a href="#home">Places to visit</a> </li>
-                <li class="l"><a href="/Tourist Intrests.html">Tourist Intrests</a></li>
+                <li class="l"><a href="Tourist Intrests.html">Tourist Intrests</a></li>
                 <li class="l"><a href="https://www.maharashtratourism.gov.in/-/nagpur-city">More to Know!!</a></li>
             </ul>
         </nav>
@@ -30,7 +30,7 @@
     <h1><u>Tourist Places</u></h1>
     <h2>1.Ramtek</h2>
     
-        <br><img src="/2021-09-28.jpg" height="200px" align="left">
+        <br><img src="2021-09-28.jpg" height="200px" align="left">
         <p>Ramtek: Ramtek is approximately 50 KM away from the city of Nagpur. A must visit place for the history enthusiasts. There is a temple dedicated to Lord Rama from whom the name was given.
             Ramtek hosts the historic temple of Rama. It is believed that Ramtek was the place where Rama, the Hindu god, rested while he was in exile. According to Hindu history the ashram of the Hindu sage Agastya was situated close to Ramtek. The present temple was built by Raghuji Bhonsale, the Maratha ruler of Nagpur in 18th century after his victory over fort of Deogarh in Chindwara.
 
@@ -52,7 +52,7 @@ This place is also related to the Sanskrit poet Kalidasa. It is believed that Ka
 <br>
 <br>
     <h2>3.Tadoba Wildlife Sanctuary</h2>
-    <img src="/tiger.jpg"  height="200px" align="left">
+    <img src="tiger.jpg"  height="200px" align="left">
 <p>Tadoba Wildlife Sanctuary: For nature lovers. Tadoba National Park is a must visit place. Located at a distance of 150 KM away from the city of Nagpur, it is home to the Bengal tigers and other diverse species of animals, plants and birds. The prime attraction of this park is the jungle safari.</p>
 <br>
 <br>
@@ -60,7 +60,7 @@ This place is also related to the Sanskrit poet Kalidasa. It is believed that Ka
 <br>
 <br>
 <h2> 4.Chikhaldara</h2>
-<img src="/CHIKHALDARA.jpg" height="200px" align="right">
+<img src="CHIKHALDARA.jpg" height="200px" align="right">
 <br>
 
 <br>
